# kernel-testbed

./: Cargo.toml  LICENSE  README.md
.github/workflows/: comment-on-pr.yml  conformance.yml  deploy-site.yml  site-ci.yml
notebooks/: og-images.ipynb
site/: .gitignore  eslint.config.js  index.html  next.config.js  package-lock.json  package.json  vite.config.ts
site/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
site/app/cards/: page.tsx
site/app/components/: CardsContent.tsx  HomeContent.tsx
site/app/kernel/[name]/: opengraph-image.tsx  page.tsx
site/app/matrix/: page.tsx
site/scripts/: generate-markdown.ts
site/src/: App.tsx  index.css
site/src/components/: ConformanceMatrix.tsx  CopyMarkdownButton.tsx  FailureSummary.tsx  Header.tsx  KernelCard.tsx  LanguageIcons.tsx  TestResultBadge.tsx  TierBreakdown.tsx
site/src/data/: kernels.json  kernels.schema.json
site/src/hooks/: useConformanceData.ts
site/src/lib/: data.ts  github.ts  icon-paths.ts  kernel-metadata.ts  markdown-renderers.ts
site/src/types/: report.ts
snippets/: snippets.json  snippets.schema.json
src/: harness.rs  lib.rs  main.rs  report.rs  snippets.rs  tests.rs  types.rs
