[package]
name = "jupyter-kernel-test"
version = "0.1.0"
edition = "2021"
description = "Jupyter kernel protocol conformance test suite"
license = "BSD-3-Clause"
repository = "https://github.com/runtimed/kernel-testbed"

[[bin]]
name = "jupyter-kernel-test"
path = "src/main.rs"

[dependencies]
# Use fix branch until PR #283 is merged (date field optional for Almond)
jupyter-protocol = { git = "https://github.com/runtimed/runtimed", branch = "fix-optional-header-date" }
runtimelib = { git = "https://github.com/runtimed/runtimed", branch = "fix-optional-header-date", features = ["tokio-runtime", "ring"] }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
